syntax = "proto3";

option csharp_namespace = "Proto.Command.WorkDays";

import "google/protobuf/timestamp.proto";

service WorkDayCommandProtoService {
  rpc CreateWorkDay (CreateWorkDayCommandProto) returns (CommandResponse);
}

message CreateWorkDayCommandProto {
  string workDayId = 1;
  google.protobuf.Timestamp date = 2;
}

message CommandResponse {
  bool success = 1;
}
